# brobot

./: .gitignore  .pre-commit-config.yaml  README.md  setup.sh  setup_robot.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: ament_flake8.ini  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ros-lint.yaml  ros-test.yaml  ros.yaml
src/: ros2.repos
src/brobot/: CMakeLists.txt  package.xml
src/brobot_base/: CMakeLists.txt  package.xml
src/brobot_bringup/: CMakeLists.txt  package.xml
src/brobot_bringup/config/: joy.yaml
src/brobot_bringup/launch/: bringup.launch.py  custom_robot.launch.py  default_robot.launch.py  depth.launch.py  joy_teleop.launch.py  lasers.launch.py  sensors.launch.py
src/brobot_description/: CMakeLists.txt  package.xml
src/brobot_description/launch/: description.launch.py
src/brobot_description/rviz/: description.rviz
src/brobot_description/urdf/: 4wd_properties.urdf.xacro
src/brobot_description/urdf/robots/: 2wd.urdf.xacro  4wd.urdf.xacro  mecanum.urdf.xacro  square.urdf.xacro
src/brobot_description/urdf/sensors/: camera.urdf.xacro  generic_laser.urdf.xacro
src/brobot_gazebo/: CMakeLists.txt  package.xml
src/brobot_gazebo/launch/: gazebo.launch.py
src/brobot_navigation/: CMakeLists.txt  package.xml
src/brobot_navigation/config/: slam.yaml
src/brobot_navigation/launch/: navigation.launch.py  slam.launch.py
src/brobot_navigation/maps/: bad_dining_room.pgm  bad_dining_room.yaml  first_floor_messy.pgm  first_floor_messy.yaml  first_floor_partial.pgm  first_floor_partial.yaml  gas_station_sim.pgm  gas_station_sim.yaml
src/brobot_navigation/rviz/: brobot_slam.rviz
src/brobot_viz/: CMakeLists.txt  package.xml
src/brobot_viz/launch/: navigation.launch.py  robot_model.launch.py  slam.launch.py
src/catbot_description/: .pre-commit-config.yaml  CMakeLists.txt  package.xml
src/catbot_description/config/: controllers.yaml
src/catbot_description/launch/: description.launch.py  robot_state_publisher.launch.py  view_catbot.launch.py
src/catbot_description/meshes/collision/: wheel_assm_2_collision.stl  wheel_assm_3_collision.stl  wheel_assm_4_collision.stl  wheel_assm_collision.stl
src/catbot_description/onshape/: moveMeshes.sh  requirements.txt  urdf_newlines.py
src/catbot_description/rviz/: catbot.rviz  description.rviz
src/catbot_description/urdf/: 4wd_control.xacro  4wd_properties.urdf.xacro  catbot.urdf.xacro  gazebo_catbot.xacro  gazebo_control.xacro
src/catbot_gazebo/: CMakeLists.txt  package.xml
src/catbot_gazebo/launch/: gazebo.launch.py
src/catbot_simulation/: CMakeLists.txt  package.xml
src/catbot_simulation/launch/: gazebo.launch.py
(+63 files in other folders)
